--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "main": "index.js",
   "scripts": {
     "build": "rollup --config rollup.config.js",
+    "prepare": "npx browserslist@latest --update-db",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -26,6 +27,10 @@
   },
   "homepage": "https://github.com/open-innovations/ukpn-ecosystem-map#readme",
   "devDependencies": {
+    "@babel/core": "^7.16.0",
+    "@babel/preset-env": "^7.16.4",
+    "@rollup/plugin-babel": "^5.3.0",
+    "@rollup/plugin-node-resolve": "^13.0.6",
     "rollup": "^2.60.1",
     "rollup-cli": "^1.0.9"
   }
