--- a/src/.babelrc.json
+++ b/src/.babelrc.json
@@ -1,4 +1,12 @@
 {
-  "presets": ["@babel/env"],
+  "presets": [
+    [
+      "@babel/env",
+      {
+        "useBuiltIns": "usage",
+        "corejs": { "version": "3.19", "proposals": true }
+      }
+    ]
+  ],
   "plugins": []
 }
