--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-commonjs": "^21.0.1",
     "@rollup/plugin-node-resolve": "^13.0.6",
+    "autoprefixer": "^10.4.0",
+    "cssnano": "^5.0.11",
     "rollup": "^2.60.1",
     "rollup-cli": "^1.0.9",
     "rollup-plugin-livereload": "^2.0.5",
