All the linting, all the time

--- a/package.json
+++ b/package.json
@@ -36,6 +36,11 @@
     "@rollup/plugin-node-resolve": "^13.0.6",
     "autoprefixer": "^10.4.0",
     "cssnano": "^5.0.11",
+    "eslint": "^7.32.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.2.0",
     "rollup": "^2.60.1",
     "rollup-cli": "^1.0.9",
     "rollup-plugin-livereload": "^2.0.5",
